# jyakoTen

./: .gitignore  LICENSE  README.md  __init__.py  faster_whisper_batch.py  gui.py  pyproject.toml  review_gemini3.md  score.py  score_batch.py
.ipynb_checkpoints/: pyproject-checkpoint.toml  requires-checkpoint.txt
jyakoTen/: __init__.py  __main__.py  score.py
jyakoTen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jyakoTen/tests/: test1.py
jyakoTen/transcripts/: rohan4600_transcript_utf8.txt
jyakoTen/utils/: kanji_split.py  mecab_utils.py  mora_utils.py
scores/: ita04_normal_recitation_score(321.421 of 324).txt
utils/: mecab_utils.py
utils/.ipynb_checkpoints/: alkana_utils-checkpoint.py  kanji_split-checkpoint.py  mecab_utils-checkpoint.py
