[project]
name = "jyakoTen"
version = "0.1.0.4"
description = "recognized text scoreing library"
requires-python = ">=3.10"
license = {text = "MIT License"}

dependencies =[
"pyopenjtalk",
"alkana",
"mecab-python3",
"unidic_lite",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['jyakoTen']
packages = ["jyakoTen","jyakoTen.utils"]


[tool.setuptools.package-data]
jyakoTen = ["transcripts/*.txt","scores/*.txt","examples/*.txt"]